test/parallel/forall/reduce-intents/ri-error-result-type.good
ri-error-result-type.chpl:7: error: cannot store reduction result of type int(64) into a variable of type bool
